última atualizações com refinamentos nos arquivos

--- a/style2.css
+++ b/style2.css
@@ -40,7 +40,7 @@
   margin: 20px 0px 15px 0px;
 }
 .desc-musica span {
-  color: #f7f7f7;
+  color: #abaaaa;
   font-style: italic;
 }
 .conteudo-musica p {
